--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.wrapper {
+  padding-top: 30px;
+}
+  
+body h3 {
+  margin-bottom: 25px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.lol {
+	margin: 1.5%;	
+	background-image: linear-gradient(180deg, #eee, #fff 200px, #fff);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	  
+  
+  
+.navbar-brand a {
+  color: #ffffff;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+.form-wrapper,
+.table-wrapper {
+  max-width: 500px;
+  margin: 0 auto;
 }
-
-.App-link {
-  color: #61dafb;
+  
+.table-wrapper {
+  max-width: 700px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+.edit-link {
+  padding: 7px 10px;
+  font-size: 0.875rem;
+  line-height: normal;
+  border-radius: 0.2rem;
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+  margin-right: 10px;
+  position: relative;
+  top: 1px;
+}
+  
+.edit-link:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
+  
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+  
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
