Padding added to the bottom of emailBar component

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ a:active {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
+  padding: 3rem 1rem !important;
 }
 
 .card-title {
