--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -35,6 +35,7 @@
 .navbar {
     height: 90px;
     background: #1f306e;
+    justify-content: space-between;
   }
   
   .navbar img {
@@ -52,5 +53,19 @@
       margin-bottom:10px;
       margin-top: 30px;
   
+    }
+  }
+
+  .App {
+    margin-top: 50px;
+    padding-right: 20px;
+    cursor: pointer;
+    transition: 1.4s;
+  }
+  @media screen and (max-width: 900px) {
+    .App {
+      margin-top: 50px;
+      height: 100px;
+      margin-bottom:10px;
     }
   }
