--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,9 @@ a:active {
 .contador p:before {
   content: counter(css-counter); /* Apply counter before children's content. */
 }
-
+.botonCheck{
+  background-color: #1f306e !important;
+}
 
 .card {
   align-self: center;
