--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@ a:active {
   text-decoration: none !important;
   padding: 20px;
   display: grid;
+  grid-template-columns: fit-content(300px) fit-content(300px) 1fr;
+
   background-color: #1f306e;
   list-style-type: none;
   counter-reset: css-counter 0;
@@ -46,6 +48,7 @@ a:active {
   grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
   grid-auto-rows: auto;
   gap: 10px;
+  /* box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22); */
   cursor: pointer;
   transition: 1.4s;
 }
@@ -72,6 +75,7 @@ a:active {
   align-self: center;
   text-align: center;
   height: 100%;
+    
 }
 
 
