--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -5,6 +5,7 @@
     padding-left: 20px;
     top:20px;
     margin-bottom: 10px;
+    /* bottom: 20px; */
   }
   
   @media only screen and (min-width: 600px) {
@@ -46,9 +47,12 @@
   }
   @media screen and (max-width: 900px) {
     .navbar img {
+      margin-top: 20px;
       height: 100px;
+     
       margin-bottom:10px;
       margin-top: 30px;
+  
     }
   }
 
