--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ a:active {
   padding: 20px;
   display: grid;
   grid-template-columns: fit-content(300px) fit-content(300px) 1fr;
-
+  
   background-color: #1f306e;
   list-style-type: none;
   counter-reset: css-counter 0;
@@ -87,6 +87,7 @@ a:active {
   align-self: center;
   text-align: center;
   height: 100%;
+  justify-content: space-between;
     
 }
 
@@ -102,6 +103,7 @@ a:active {
 
 .card-body{
   display: flex;
+  flex: 0 1 auto !important;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem 1rem !important;
