quick fix css card

--- a/src/App.css
+++ b/src/App.css
@@ -53,16 +53,11 @@ a:active {
   transition: 1.4s;
 }
 @media only screen and (max-width: 450px) {
-  /* For tablets: */
   .contenido {
     grid-template-columns: repeat(2, minmax(183px, 1fr));
+    justify-content: space-between;
     
-   
-    }
-    .card-body {
-    height: 10%   !important;
-    }
-  
+  }
 }
 
 
