--- a/src/Components/itemlist/itemlist.css
+++ b/src/Components/itemlist/itemlist.css
@@ -1,5 +1,5 @@
 .list-items{
-    background-color :#a3cdff;
+    background-color :#EEEDFF;
     text-align: center;
     max-width : 100% !important;
     color: #1f306e;
