--- a/src/Components/itemlist/itemlist.css
+++ b/src/Components/itemlist/itemlist.css
@@ -1,7 +1,11 @@
-.list-items{
+.row{
     background-color :#EEEDFF;
+    display: flex;
+    position: fixed;
+    width: -webkit-fill-available;
     text-align: center;
     max-width : 100% !important;
     color: #1f306e;
+    z-index: 1;
 }
 
