--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -1,12 +1,22 @@
 /* For mobile phones: */
-[class*="search-input"] {
+@media only screen and (min-width: 300px){
+.search-input {
     width: 100%;
     padding-right: 20px;
     padding-left: 20px;
     top:20px;
     margin-bottom: 10px;
     /* bottom: 20px; */
+
   }
+  .navbar{
+    padding-top: 20px;
+  }
+  .navButton{
+    margin-top: 87px !important;
+  }
+}
+
   
   @media only screen and (min-width: 600px) {
     /* For tablets: */
