--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,9 @@ a:active {
    
 }
 h1{
-  font-size: 16px !important;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 20px !important;
 }
 
 
